# hello_triangle

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.cpp  setup.hpp  setup_vcpkg.sh  triangle.hpp
include/: bindings.hpp  buffer.hpp  buffers.hpp  primitives.hpp  shaders.hpp  window.hpp
scripts/: setup_vcpkg.sh
src/core/: main.cpp  window.cpp
src/graphics/: bindings.cpp  buffer.cpp  buffers.cpp  shaders.cpp
